--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,6 +51,8 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "codecvt": "cpp",
+        "ratio": "cpp"
     }
 }
